lay: fix author-bio color in lightmode & fix post-item margins on mobile

--- a/_sass/klise/_dark.scss
+++ b/_sass/klise/_dark.scss
@@ -1,7 +1,6 @@
 body[data-theme="dark"] {
   color: $dark-text-base-color;
   background-color: $dark-green-bg;
-
   // Heading
   h1,
   h2,
@@ -24,6 +23,11 @@ body[data-theme="dark"] {
     tr {
       border-color: $dark-light;
     }
+  }
+
+  // Author bio
+  .author .author-bio {
+    color: rgba(199,190,190,0.9);
   }
 
   // Post
